k8s/deploys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealprovider-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealprovider-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: mealprovider-web
    spec:
      containers:
        - name: web-container
          image: ghcr.io/dd360870/mealprovider-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 200m
              memory: 200Mi
      imagePullSecrets:
        - name: ghcr-login-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealprovider-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealprovider-db
  template:
    metadata:
      labels:
        app: mealprovider-db
    spec:
      containers:
        - name: mealprovider-db
          image: docker.io/library/mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
